Fix line breaks in code blocks, remove jrl.ninja link as it changed to something weird = (#1)

--- a/assets/main.css
+++ b/assets/main.css
@@ -132,6 +132,7 @@ pre {
 }
 
 code {
+  word-break: break-all;
   padding: 0.1em;
 }
 
